--- a/.gitignore
+++ b/.gitignore
@@ -350,3 +350,38 @@ TP03/cute/lgpl.txt
 TP03/cute/ostream_listener.h
 TP03/cute/xml_listener.h
 .metadata/
+TP05/.cproject
+TP05/.gitignore
+TP05/.project
+TP05/.settings/ch.hsr.ifs.cute.elevenator.prefs
+TP05/.settings/language.settings.xml
+TP05/.settings/org.eclipse.cdt.managedbuilder.core.prefs
+TP05/cute/cute.h
+TP05/cute/cute_base.h
+TP05/cute/cute_counting_listener.h
+TP05/cute/cute_data_driven.h
+TP05/cute/cute_demangle.h
+TP05/cute/cute_determine_library.h
+TP05/cute/cute_determine_traits.h
+TP05/cute/cute_determine_version.h
+TP05/cute/cute_diff_values.h
+TP05/cute/cute_equals.h
+TP05/cute/cute_listener.h
+TP05/cute/cute_range.h
+TP05/cute/cute_relops.h
+TP05/cute/cute_repeated_test.h
+TP05/cute/cute_runner.h
+TP05/cute/cute_suite.h
+TP05/cute/cute_suite_test.h
+TP05/cute/cute_test.h
+TP05/cute/cute_test_incarnate.h
+TP05/cute/cute_testmember.h
+TP05/cute/cute_throws.h
+TP05/cute/cute_to_string.h
+TP05/cute/cute_version.h
+TP05/cute/cute_xml_file.h
+TP05/cute/gpl.txt
+TP05/cute/ide_listener.h
+TP05/cute/lgpl.txt
+TP05/cute/ostream_listener.h
+TP05/cute/xml_listener.h
