--- a/.gitignore
+++ b/.gitignore
@@ -385,3 +385,39 @@ TP05/cute/ide_listener.h
 TP05/cute/lgpl.txt
 TP05/cute/ostream_listener.h
 TP05/cute/xml_listener.h
+TP06/.gitignore
+TP06/.project
+TP06/.settings/ch.hsr.ifs.cute.elevenator.prefs
+TP06/.settings/language.settings.xml
+TP06/.settings/org.eclipse.cdt.managedbuilder.core.prefs
+TP06/cute/cute.h
+TP06/cute/cute_base.h
+TP06/cute/cute_counting_listener.h
+TP06/cute/cute_data_driven.h
+TP06/cute/cute_demangle.h
+TP06/cute/cute_determine_library.h
+TP06/cute/cute_determine_traits.h
+TP06/cute/cute_determine_version.h
+TP06/cute/cute_diff_values.h
+TP06/cute/cute_equals.h
+TP06/cute/cute_listener.h
+TP06/cute/cute_range.h
+TP06/cute/cute_relops.h
+TP06/cute/cute_repeated_test.h
+TP06/cute/cute_runner.h
+TP06/cute/cute_suite.h
+src.rar
+TP06/.cproject
+TP06/cute/cute_suite_test.h
+TP06/cute/cute_test.h
+TP06/cute/cute_test_incarnate.h
+TP06/cute/cute_testmember.h
+TP06/cute/cute_throws.h
+TP06/cute/cute_to_string.h
+TP06/cute/cute_version.h
+TP06/cute/cute_xml_file.h
+TP06/cute/gpl.txt
+TP06/cute/ide_listener.h
+TP06/cute/lgpl.txt
+TP06/cute/ostream_listener.h
+TP06/cute/xml_listener.h
