--- a/.gitignore
+++ b/.gitignore
@@ -421,3 +421,38 @@ TP06/cute/ide_listener.h
 TP06/cute/lgpl.txt
 TP06/cute/ostream_listener.h
 TP06/cute/xml_listener.h
+TP07/.cproject
+TP07/.gitignore
+TP07/.project
+TP07/.settings/ch.hsr.ifs.cute.elevenator.prefs
+TP07/.settings/language.settings.xml
+TP07/.settings/org.eclipse.cdt.managedbuilder.core.prefs
+TP07/cute/cute.h
+TP07/cute/cute_base.h
+TP07/cute/cute_counting_listener.h
+TP07/cute/cute_data_driven.h
+TP07/cute/cute_demangle.h
+TP07/cute/cute_determine_library.h
+TP07/cute/cute_determine_traits.h
+TP07/cute/cute_determine_version.h
+TP07/cute/cute_diff_values.h
+TP07/cute/cute_equals.h
+TP07/cute/cute_listener.h
+TP07/cute/cute_range.h
+TP07/cute/cute_relops.h
+TP07/cute/cute_repeated_test.h
+TP07/cute/cute_runner.h
+TP07/cute/cute_suite.h
+TP07/cute/cute_suite_test.h
+TP07/cute/cute_test.h
+TP07/cute/cute_test_incarnate.h
+TP07/cute/cute_testmember.h
+TP07/cute/cute_throws.h
+TP07/cute/cute_to_string.h
+TP07/cute/cute_version.h
+TP07/cute/cute_xml_file.h
+TP07/cute/gpl.txt
+TP07/cute/ide_listener.h
+TP07/cute/lgpl.txt
+TP07/cute/ostream_listener.h
+TP07/cute/xml_listener.h
