Added TP08 (NOT FINISHED YET), TP09, TP10 ( f) not done yet)

--- a/.gitignore
+++ b/.gitignore
@@ -456,3 +456,108 @@ TP07/cute/ide_listener.h
 TP07/cute/lgpl.txt
 TP07/cute/ostream_listener.h
 TP07/cute/xml_listener.h
+TP08/.cproject
+TP08/.gitignore
+TP08/.project
+TP08/.settings/ch.hsr.ifs.cute.elevenator.prefs
+TP08/.settings/language.settings.xml
+TP08/.settings/org.eclipse.cdt.managedbuilder.core.prefs
+TP08/cute/cute.h
+TP08/cute/cute_base.h
+TP08/cute/cute_counting_listener.h
+TP08/cute/cute_data_driven.h
+TP08/cute/cute_demangle.h
+TP08/cute/cute_determine_library.h
+TP08/cute/cute_determine_traits.h
+TP08/cute/cute_determine_version.h
+TP08/cute/cute_diff_values.h
+TP08/cute/cute_equals.h
+TP08/cute/cute_listener.h
+TP08/cute/cute_range.h
+TP08/cute/cute_relops.h
+TP08/cute/cute_repeated_test.h
+TP08/cute/cute_runner.h
+TP08/cute/cute_suite.h
+TP08/cute/cute_suite_test.h
+TP08/cute/cute_test.h
+TP08/cute/cute_test_incarnate.h
+TP08/cute/cute_testmember.h
+TP08/cute/cute_throws.h
+TP08/cute/cute_to_string.h
+TP08/cute/cute_version.h
+TP08/cute/cute_xml_file.h
+TP08/cute/gpl.txt
+TP08/cute/ide_listener.h
+TP08/cute/lgpl.txt
+TP08/cute/ostream_listener.h
+TP08/cute/xml_listener.h
+TP09/.cproject
+TP09/.gitignore
+TP09/.project
+TP09/.settings/ch.hsr.ifs.cute.elevenator.prefs
+TP09/.settings/language.settings.xml
+TP09/.settings/org.eclipse.cdt.managedbuilder.core.prefs
+TP09/cute/cute.h
+TP09/cute/cute_base.h
+TP09/cute/cute_counting_listener.h
+TP09/cute/cute_data_driven.h
+TP09/cute/cute_demangle.h
+TP09/cute/cute_determine_library.h
+TP09/cute/cute_determine_traits.h
+TP09/cute/cute_determine_version.h
+TP09/cute/cute_diff_values.h
+TP09/cute/cute_equals.h
+TP09/cute/cute_listener.h
+TP09/cute/cute_range.h
+TP09/cute/cute_relops.h
+TP09/cute/cute_repeated_test.h
+TP09/cute/cute_runner.h
+TP09/cute/cute_suite.h
+TP09/cute/cute_suite_test.h
+TP09/cute/cute_test.h
+TP09/cute/cute_test_incarnate.h
+TP09/cute/cute_testmember.h
+TP09/cute/cute_throws.h
+TP09/cute/cute_to_string.h
+TP09/cute/cute_version.h
+TP09/cute/cute_xml_file.h
+TP09/cute/gpl.txt
+TP09/cute/ide_listener.h
+TP09/cute/lgpl.txt
+TP09/cute/ostream_listener.h
+TP09/cute/xml_listener.h
+TP10/.cproject
+TP10/.gitignore
+TP10/.project
+TP10/.settings/ch.hsr.ifs.cute.elevenator.prefs
+TP10/.settings/language.settings.xml
+TP10/.settings/org.eclipse.cdt.managedbuilder.core.prefs
+TP10/cute/cute.h
+TP10/cute/cute_base.h
+TP10/cute/cute_counting_listener.h
+TP10/cute/cute_data_driven.h
+TP10/cute/cute_demangle.h
+TP10/cute/cute_determine_library.h
+TP10/cute/cute_determine_traits.h
+TP10/cute/cute_determine_version.h
+TP10/cute/cute_diff_values.h
+TP10/cute/cute_equals.h
+TP10/cute/cute_listener.h
+TP10/cute/cute_range.h
+TP10/cute/cute_relops.h
+TP10/cute/cute_repeated_test.h
+TP10/cute/cute_runner.h
+TP10/cute/cute_suite.h
+TP10/cute/cute_suite_test.h
+TP10/cute/cute_test.h
+TP10/cute/cute_test_incarnate.h
+TP10/cute/cute_testmember.h
+TP10/cute/cute_throws.h
+TP10/cute/cute_to_string.h
+TP10/cute/cute_version.h
+TP10/cute/cute_xml_file.h
+TP10/cute/gpl.txt
+TP10/cute/ide_listener.h
+TP10/cute/lgpl.txt
+TP10/cute/ostream_listener.h
+TP10/cute/xml_listener.h
